# eman2

./: .eman2settings  CMakeLists.txt  INSTALL  install-dependencies.py  redirect_imports.py  refactor.py  refactor_imports.py
EMAN2/: EMAN2PAR.py
conda/: files  index.json  meta  tested.txt
conda/eman2/: build.sh  meta.yaml
conda/recipe/: build.sh  meta.yaml
conda/recipes/eman2/: build.sh  condarc
conda/recipes/ftgl/: build.sh
conda/recipes/gsl/: build.sh
doc/: CMakeLists.txt  makedoc.sh
doc/latex/: CMakeLists.txt
doc/modular_class_html/: CMakeLists.txt
examples/: CMakeLists.txt  alignbystars.py  convnet_pickparticle.py  denoiseautoencoder.py  displaydemo.py  e2fftsynth.py  e2figureplot.py  e2melonball.py  e2moviealigner.py  e2ptclfsc_multi.py  e2spt_coeffplot.py  e2spt_icethicknessplot.py  e2spt_rotationalplot.py  e2spt_test.py  e2spt_timetest.py  e2spt_tomosimjobs.py  e2starfiletoboxfile.py  e2starfiletolstfile.py  e2tomoseg.py  e2tvrecon2d.py  extractfsc.py  gentestdata.py  makebigfromseq.py  morphboxer.py  movie_ccf.py  recoverctf.py  redo_convergence.py  tasktest.py  telescope.py  tomotrackbox.py
fonts/: CMakeLists.txt
images/: CMakeLists.txt
images/macimages/: CMakeLists.txt
libEM/: CMakeLists.txt
libEM/cuda/: CMakeLists.txt
libEM/gorgon/: CMakeLists.txt
libEM/plugins/: CMakeLists.txt
libEM/pmconfig/: CMakeLists.txt
libEM/sparx/: CMakeLists.txt
libpyEM/: .CMakeLists.txt.swp  CMakeLists.txt  EMAN2.py  EMAN2PAR.py  EMAN2_cppwrap.py  EMAN2db.py  EMAN2jsondb.py  __init__.py  rename.sh
libpyEM/qtgui/: CMakeLists.txt  __init__.py.qtgui  em3Dfonts.py  em3Dhelloworld.py  emapplication.py  emboxerbase.py  embrowse.py  embrowser.py  emdataitem3d.py  emdatastorage.py  emfoldhunterstat.py  emform.py  emglobjects.py  emhist.py  emimage.py  emimage2d.py  emimage3d.py  emimage3diso.py  emimage3dslice.py  emimage3dsym.py  emimage3dvol.py  emimagemx.py  emimageutil.py  emitem3d.py  emlights.py  empdbitem3d.py  empdbvaltool.py  empdbviewer.py  emplot2d.py  emplot3d.py  empmtabwidgets.py  empmwidgets.py  emrctboxergui.py  emsave.py  emscene3d.py  emselector.py  emshape.py  emshapeitem3d.py  emsprworkflow.py  emtprworkflow.py
libpyEM/wxgui/: wxValSlider.py  wxemimage.py  wxemimagecanvas.py  wxemimageframe.py  wximagecontrol.py
programs/: CMakeLists.txt  e2.py  e22.py  e2RCTboxer.py  e2_real.py  e2bdb.py  e2boxer.py  e2boxer21.py  e2boxer_old.py  e2classaverage.py  e2classesbyref.py  e2classify.py  e2classifyligand.py  e2classifytree.py  e2classptcl.py  e2cmpxplor.py  e2ctf.py  e2ctf_auto.py  e2ctffind3util.py  e2ctfsim.py  e2display.py  e2emx.py  e2erasefiducials.py  e2euler_refine.py  e2eulerxplor.py  e2evalimage.py  e2evalparticles.py  e2evalrefine.py  e2fhstat.py  e2filtertool.py  e2flick.py  e2foldfitter.py  e2helical_recons.py  e2helixboxer.py  e2help.py  e2history.py  e2iminfo.py  e2import.py  e2initialmodel.py  e2initialmodel_hisym.py  (+58 more)
pyemtbx/: CMakeLists.txt  boxertools.py  imagetypes.py
recipes/boost/: build.sh  meta.yaml
recipes/eman2/: bld.bat  build.sh  condarc  fix-libs.py  meta.yaml  post-link.sh  pre-link.sh  pre-unlink.sh  setup.py
recipes/fftw/: bld.bat  build.sh  meta.yaml
recipes/freetype/: build.sh
recipes/gsl/: build.sh
recipes/hdf5/: build.sh  meta.yaml
recipes/jpeg/: build.sh  meta.yaml
recipes/libpng/: build.sh  meta.yaml
recipes/linux-32/fftw/: build.sh  meta.yaml
recipes/linux-32/ftgl/: meta.yaml
recipes/linux-64/eman2/: meta.yaml
recipes/linux-64/ftgl/: build.sh  meta.yaml
recipes/linux-64/ftgl/recipe/: build.sh
recipes/linux64/eman2/: meta.yaml
recipes/linux64/gsl/: meta.yaml
recipes/old/linux-64/eman2/: build.sh  meta.yaml
recipes/old/linux-64/fftw/: meta.yaml
recipes/old/linux-64/gsl/: build.sh
recipes/old/osx-64/eman2/: build.sh  fix-libs.py  pre-unlink.sh
recipes/osx-64/eman2/: fix-libs.py  meta.yaml  post-link.sh  pre-link.sh
recipes/python/gnureadline/: meta.yaml
recipes/python/numpy/: meta.yaml
recipes/python/pyqt/: build.sh  meta.yaml
recipes/qt/: qpaintengine_mac.diff
recipes/win-32/fftw/: build.sh
recipes/win-64/ftgl/: meta.yaml
recipes/win64/ftgl/: build.sh
rt/: CMakeLists.txt
rt/demo/: scene3d_test.py
rt/pyem/: CMakeLists.txt  test-imports.py  test_aligner.py  test_averager.py  test_cmp.py  test_emdata.py  test_emdata_cuda.py  test_imageio.py  test_misc.py  test_processor.py  test_reconstructor.py  test_transform.py  test_typeconverter.py  test_utils.py  test_xydata.py
sparx/: CMakeLists.txt  __init__.py
sparx/doc/: CMakeLists.txt
sparx/libpy/: CMakeLists.txt  __init__.py  alignment.py  applications.py  filter.py  fundamentals.py  global_def.py  isac.py  morphology.py  multi_shc.py  pixel_error.py  projection.py  reconstruction.py  sparx.py  statistics.py  user_functions.py  utilities.py
sparx/templates/: 3dg.py  CMakeLists.txt  import_SPIDER_320.py  import_SPIDER_refi.py  randomize2d.py  search_ali3d.py  sxgui_cter.py  sxgui_template.py  wikiparser.py
sparx/test/: 3dg.py  aaa.py  aab.py  aac.py  aad.py  aae.py  aaf.py  aag.py  aah.py  aat.py  apmq.py  fourp.py  kbplot2.py  model001.tcp  ormq.py  pdb_1.py  phasing.py  polar.py  pw2_close_b.hrs  sinh.py  test.spi  test30.spi  test_ft.py  test_pw.py  tf2d0001.tfc  vol001.tfc
sparx/test/2DA/: 2da.py  2db.py  2de.py
sparx/test/3DA/: 3da.py  3db.py  3de.py  3dg.py  rec2d_test.py
sparx/test/test_scripts/: test_rot.py
sparx/tests/: CMakeLists.txt  test_Util.py  test_fundamentals.py  test_pixel_error.py
