IF (ENABLE_AUTODOC)
    ADD_SUBDIRECTORY(latex)
    ADD_SUBDIRECTORY(modular_class_html)
    ADD_SUBDIRECTORY(doxygen)
ENDIF (ENABLE_AUTODOC)

FILE(GLOB static_html "${CMAKE_CURRENT_SOURCE_DIR}/*.html")
INSTALL(FILES ${static_html}
  	DESTINATION    ${CMAKE_INSTALL_PREFIX}/EMAN2/doc
)
INSTALL(FILES ${static_html}
  	DESTINATION    ${CMAKE_INSTALL_PREFIX}/sparx/doc
)
INSTALL(FILES INSTALL EMAN2.0.big.jpg 
    	DESTINATION ${CMAKE_INSTALL_PREFIX}/EMAN2/examples
)

